3.02/Test/declaration/errors.c/array_missing_dimension.c
int fun(){

  //int b[];  // error

  return 0;
}


int main(){

  int a[];  // error




  return 0;
}
